# dynamerge

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_diff.py  test_utils.py
dynamerge/: diff_cases.py  differ.py  main.py  marks.py  merge_cases.py  merge_policy.py  merger.py
tests/: test_diff.py  test_key_diff.py  test_mark_parser.py  test_merge.py  test_utils.py
tests/cases/: README.md  diff_cases.py  diff_dict.py  diff_list.py  merge_cases.py  merge_dict.py  merge_list.py
